# portal

./: .dockerignore  .env.example  .gitignore  .golangci.yml  .goreleaser.yaml  .pre-commit-config.yaml  .yamllint.yml  AGENTS.md  BENCHMARK.md  CI_CD.md  Cargo.toml  DOCKER_BUILD_VERIFICATION.md  Dockerfile  Dockerfile.frontend  Dockerfile.tunnel  E2EE_VERIFICATION_GUIDE.md  Makefile  README.md  README.zh-CN.md  README_RELAY.md  ROADMAP.md  TODO.md  buf.gen.yaml  buf.yaml  docker-compose.yml  fly.toml  go.mod  go.sum  go.work  go.work.sum  golangci.yml  justfile  package-lock.json  pre-commit-config.yaml  registry.json
cmd/: server.go
docs/: architecture.md  deployment.md  development.md  fast-multipath-routing-spec.md  glossary.md  greenfield-raw-tcp-sni-keyless.md  multipath-routing-spec.md  ols-algorithm-details.md  ols-load-balancing.md  portal-deploy-guide.md  portalv2-protocol-design.md  reverse-siamese-onion-phase1.md  weight-manager.md
frontend/: AGENTS.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  update-shadcn.cjs  vite.config.ts
misc/: branch-comparison.md
pkg/: client.go  p2p.go
portal/: api.go  api_server.go  benchmark_test.go  broker.go  broker_test.go  client.go  handlers.go  helper.go  helpers.go  integration_test.go  lease.go  lease_test.go  lease_v2.go  ols.go  peer.go  (+25 more)
portal/wasm/: Cargo.toml  E2EE_PROXY_INTEGRATION.md  README.md  SERVICE_WORKER.md  USAGE.md  package.json  secure-websocket.js  sw-proxy.js  sw.js
portal/wasm/proto/rdsec/: rdsec.proto
portal/wasm/proto/rdverb/: rdverb.proto
portal/wasm/src/: adapters.rs  lib.rs  proxy_engine.rs  relay_client.rs  tunnel_manager.rs  utils.rs  ws_stream.rs
portal/wasm/src/proto/: mod.rs  rdsec.rs
(+505 files in other folders)
